# object-oriented-C

./: CMakeLists.txt  LICENSE  README.md  exectuable.sh
src/: CMakeLists.txt  debug.sh  exectuable.sh  main.c
src/docs/: readme.txt
src/libs/: readme.txt
